--- a/configs/AudioGS_config.yaml
+++ b/configs/AudioGS_config.yaml
@@ -6,6 +6,7 @@ data:
   dataset_path: "/data0/determined/users/andywu/GS-TS/data/raw/LibriTTS_R"
   sample_rate: 24000
   subsets: ["train-clean-100", "train-clean-360"]
+  val_subsets: ["dev-clean"]
   max_audio_length: 10.0
 
 # Encoder Model
@@ -18,16 +19,14 @@ encoder_model:
   num_layers: 6
   use_conformer: true
 
-# Training
+# Training (Step-Based)
 training:
-  batch_size: 32  # Per GPU
+  batch_size: 32           # Per GPU
   learning_rate: 0.0005
-  max_epochs: 100
+  max_steps: 100000        # Total training steps (not epochs!)
   warmup_steps: 1000
-  val_interval: 1000
-  save_interval: 5000
-  
-  # Logging
+  val_interval: 2000       # Validate every 2k steps
+  save_interval: 10000     # Checkpoint every 10k steps
   log_interval: 10
 
 # Loss
