--- a/configs/AudioGS_config.yaml
+++ b/configs/AudioGS_config.yaml
@@ -54,7 +54,7 @@ loss:
   
   # Regularization
   sparsity_weight: 0.001
-  amp_reg_weight: 0.01
+  amp_reg_weight: 0.1       # Increased from 0.01 (v2.0 fix: enforce sparsity)
 
 # Distributed Training
 distributed:
