--- a/configs/AudioGS_config.yaml
+++ b/configs/AudioGS_config.yaml
@@ -1,4 +1,4 @@
-# AudioGS Configuration: VAE-based Encoder with VITS Loss Configuration
+# AudioGS Configuration: Amortized Inference (Encoder-Based) + GAN Training
 # =========================================================
 
 # Data
@@ -7,27 +7,27 @@ data:
   sample_rate: 24000
   subsets: ["train-clean-100", "train-clean-360"]
   val_subsets: ["dev-clean"]
-  max_audio_length: 2.0
+  max_audio_length: 10.0
 
-# Encoder Model (VAE)
+# Encoder Model
 encoder_model:
   input_mel_bins: 80
   hidden_channels: 256
   grid_freq_bins: 128
   atoms_per_cell: 2
-  time_downsample_factor: 240     # Mel hop: 24000/240 = 100Hz
-  latent_downsample_ratio: 2      # Latent: 100Hz/2 = 50Hz
+  time_downsample_factor: 240  # 24000Hz / 240 = 100Hz frame rate
   num_layers: 6
   use_conformer: true
+  use_checkpointing: true  # Gradient checkpointing for memory savings
 
-# Training (Step-Based)
+# Training (Step-Based with AMP)
 training:
-  batch_size: 16             # Small batch for VAE+GAN
-  accumulation_steps: 2     # Gradient accumulation
-  num_workers: 8
-  learning_rate: 0.0002     # G learning rate
+  batch_size: 4
+  accumulation_steps: 8     # Effective batch = 4*8*4GPUs = 128
+  learning_rate: 0.0002     # G learning rate (AdamW)
   max_steps: 100000
   warmup_steps: 1000
+  warmup_freeze_structure: 2000
   val_interval: 2000
   save_interval: 10000
   log_interval: 10
@@ -35,28 +35,24 @@ training:
 # GAN Training
 gan:
   enable: true
-  d_lr: 0.0001            # Reduced from 2e-4 for stability
-  fm_weight: 0.5          # Reduced from 2.0 to prevent early explosion
-  adv_weight: 1.0           # VITS standard
-  warmup_steps: 2000      # Do not train D for first 5k steps
+  d_lr: 0.0002              # Discriminator learning rate
+  fm_weight: 10.0           # Feature matching loss weight
+  adv_weight: 1.0           # Adversarial loss weight
 
-# Loss (VITS Standard Configuration)
+# Loss (Rebalanced for GAN training)
 loss:
-  # Reconstruction
-  mel_weight: 45.0          # VITS standard (L1 Mel Loss)
-  spectral_weight: 1.0      # Multi-resolution STFT
+  fft_sizes: [2048, 1024, 512, 128]
+  hop_sizes: [512, 256, 128, 32]
+  win_lengths: [2048, 1024, 512, 128]
+  spectral_weight: 1.0
+  mel_weight: 25.0          # High for GAN stability
   time_domain_weight: 0.1
   phase_weight: 2.0
-  pre_emp_weight: 10.0
-  
-  # VAE
-  kl_weight: 1.0            # VITS standard
-  
-  # Regularization
   sparsity_weight: 0.001
-  amp_reg_weight: 0.1       # Increased from 0.01 (v2.0 fix: enforce sparsity)
+  amp_reg_weight: 0.01
+  pre_emp_weight: 10.0
 
 # Distributed Training
 distributed:
   backend: "nccl"
-  find_unused_parameters: false  # Better performance
+  find_unused_parameters: false
