--- a/configs/atom_fitting_config.yaml
+++ b/configs/atom_fitting_config.yaml
@@ -6,12 +6,13 @@
 data:
   dataset_path: "/data0/determined/users/andywu/GS-TS/data/raw/LibriTTS_R/train/train-clean-100"
   sample_rate: 24000
-  max_audio_length: 10.0  # Max audio duration (seconds)
+  max_audio_length: 3.0  # Max audio duration (seconds)
 
-# Model
+# Model (Coarse-to-Fine: Start sparse, grow via Density Control)
+# DYNAMIC DENSITY: max_atoms = duration_s × atoms_per_second
 model:
-  initial_num_atoms: 4096
-  max_num_atoms: 16384
+  initial_atoms_per_second: 1024  # Start sparse (1024/sec → 1024 for 1s, 5120 for 5s)
+  max_atoms_per_second: 4096      # Target density from Matching Pursuits literature
 
 # Initialization (PILLAR 3: Constant-Q)
 initialization:
@@ -19,42 +20,44 @@ initialization:
   sigma_min: 0.001           # Minimum sigma (1ms for transients)
   sigma_max: 0.100           # Maximum sigma (100ms for bass)
 
-# Training
+# Training (PHASE-FIRST STRATEGY)
+# Higher LRs compensate for smaller gradients from low mel weight
 training:
-  learning_rate: 0.001
-  lr_amplitude: 0.018
-  lr_position: 0.0001
-  lr_frequency: 0.0013
-  lr_sigma: 0.014
-  lr_phase: 0.0115
-  lr_chirp: 0.002
+  learning_rate: 0.001    # Increased from 0.0005
+  lr_amplitude: 0.01      # Increased from 0.005
+  lr_position: 0.0001     # Keep low for stable tau
+  lr_frequency: 0.003     # Increased from 0.0013
+  lr_sigma: 0.01          # Increased from 0.014
+  lr_phase: 0.015         # Increased from 0.0115
+  lr_chirp: 0.002         # Keep same
   max_iters: 12000
   log_interval: 50
   vis_interval: 2000
 
-# Loss (PILLAR 4: STFT > 90%)
-# Total spectral = spectral_weight(1.0) + mel_weight(45.0) + phase_weight(1.0) = 47.0
-# time_domain_weight = 0.1 = 0.2% of spectral (< 10% ✓)
+# Loss (PHASE-FIRST: Low Mel Weight forces waveform phase alignment)
+# CRITICAL: High mel weight ignores phase → metallic artifacts
+# Low mel (1.0) + STFT (1.0) + phase (1.0) = phase-coherent optimization
 loss:
   fft_sizes: [2048, 1024, 512, 128]
   hop_sizes: [512, 256, 128, 32]
   win_lengths: [2048, 1024, 512, 128]
   spectral_weight: 1.0       # Spectral Convergence + Log-Mag
-  mel_weight: 45.0           # Strong mel reconstruction
-  time_domain_weight: 0.1    # PILLAR 4: < 10% of spectral
-  phase_weight: 1.0          # Complex STFT for phase
-  amp_reg_weight: 0.0001     # Light amplitude regularization
-  pre_emp_weight: 2.0        # Pre-emphasis for HF detail
+  mel_weight: 1.0            # LOW: Forces phase alignment
+  time_domain_weight: 0.1    # Waveform L1 for phase
+  phase_weight: 1.0          # Complex STFT for phase (RESTORED)
+  amp_reg_weight: 0.0001     # Light amplitude regularization (RESTORED)
+  pre_emp_weight: 2.0        # Pre-emphasis for HF detail (RESTORED)
 
 # Density Control (PILLAR 5)
 density_control:
   grad_threshold: 0.0002
   sigma_split_threshold: 0.01  # 10ms threshold
-  prune_amplitude_threshold: 0.001
+  prune_amplitude_threshold: 0.001   # RESTORED: original prune threshold
   densify_from_iter: 500
-  densify_until_iter: 10000
+  densify_until_iter: 10000          # RESTORED: original densify end
   densification_interval: 100
   sigma_diversity_weight: 0.001
+  enable_split: false                # DISABLED: split causes artifacts
 
 # Output
 output:
