--- a/configs/codec_config.yaml
+++ b/configs/codec_config.yaml
@@ -21,28 +21,34 @@ gabor_frame:
   pad_mode: "reflect"
 
 model:
-  latent_dim: 128
-  hidden_dim: 768
+  latent_dim: 512
+  hidden_dim: 1024
   num_layers: 8
-  time_downsample: 4          # z frame-rate = STFT_frames / time_downsample
+  dilation_schedule: [1, 2, 4, 8, 16, 8, 4, 2]
+  time_downsample: 1          # set to 1 for near-lossless reconstruction
   use_vae: false              # recommend AE first; if true, also set loss.weights.kl > 0
-  dropout: 0.05
+  dropout: 0.0
 
 loss:
   weights:
     time_l1: 1.0
     stft_mss: 1.0
+    stft_feat_l1: 0.0
+    complex_stft: 0.0
+    gabor_stft_complex: 0.5
+    frame_consistency: 0.1
     kl: 0.0                   # (AE) ignored unless model.use_vae=true
     latent_l1: 0.0
+  stft_feat_highfreq_boost: 2.0
   mss:
     fft_sizes: [2048, 1024, 512]
 
 training:
-  batch_size: 32               # per GPU
+  batch_size: 128               # per GPU
   accumulation_steps: 1
   learning_rate: 2.0e-4
-  weight_decay: 1.0e-2
-  max_steps: 200000
+  weight_decay: 1.0e-3
+  max_steps: 100000
   warmup_steps: 2000
   grad_clip: 1.0
   log_interval: 20
